// Vitest Snapshot v1

exports[`SpecReporter > getHeaderDisplay > should list multiple specs 1`] = `
[
  "Running: loremipsum (v50) on Windows 10",
  "Session ID: foobar",
]
`;

exports[`SpecReporter > getHeaderDisplay > should validate header output 1`] = `
[
  "Running: loremipsum (v50) on Windows 10",
  "Session ID: foobar",
]
`;

exports[`SpecReporter > getHeaderDisplay > should validate header output in multiremote 1`] = `
[
  "Running: MultiremoteBrowser on chrome, firefox",
]
`;

exports[`SpecReporter > getResultDisplay > should not print if data table format is not given 1`] = `
[
  "» /foo/bar/loo.e2e.js",
  "Foo test",
  "grey Some important",
  "grey description to read!",
  "",
  "grey Very important business rule",
  "   green ✓ foo",
  "   green ✓ bar",
  "",
]
`;

exports[`SpecReporter > getResultDisplay > should not print if data table is empty 1`] = `
[
  "» /foo/bar/loo.e2e.js",
  "Foo test",
  "grey Some important",
  "grey description to read!",
  "",
  "grey Very important business rule",
  "   green ✓ foo",
  "   green ✓ bar",
  "",
]
`;

exports[`SpecReporter > getResultDisplay > should print data tables 1`] = `
[
  "» /foo/bar/loo.e2e.js",
  "Foo test",
  "grey Some important",
  "grey description to read!",
  "",
  "grey Very important business rule",
  "   green ✓ foo",
  "     │ Vegetable │ Rating │",
  "     │ Apricot   │ 5      │",
  "     │ Brocolli  │ 2      │",
  "     │ Cucumber  │ 10     │",
  "   green ✓ bar",
  "",
]
`;

exports[`SpecReporter > getResultDisplay > should validate the result output with tests 1`] = `
[
  "» /foo/bar/loo.e2e.js",
  "Foo test",
  "   green ✓ foo",
  "   green ✓ bar",
  "",
  "» /bar/foo/loo.e2e.js",
  "Bar test",
  "   green ✓ some test",
  "   red ✖ a failed test",
  "   red ✖ a failed test with no stack",
  "",
  "» /bar/loo/foo.e2e.js",
  "Baz test",
  "   green ✓ foo bar baz",
  "   cyan - a skipped test",
  "",
]
`;

exports[`SpecReporter > onlyFailures > false > 0 failures 1`] = `
[
  [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /foo/bar/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/foo/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/loo/foo.e2e.js
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
",
  ],
]
`;

exports[`SpecReporter > onlyFailures > false > 1 failure 1`] = `
[
  [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /foo/bar/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/foo/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/loo/foo.e2e.js
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
",
  ],
]
`;

exports[`SpecReporter > onlyFailures > true > 0 failures 1`] = `[]`;

exports[`SpecReporter > onlyFailures > true > 1 failure 1`] = `
[
  [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /foo/bar/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/foo/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/loo/foo.e2e.js
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
",
  ],
]
`;

exports[`SpecReporter > printReport > with disabled sharable Sauce report links > should print the default Sauce Labs job details page link 1`] = `[]`;

exports[`SpecReporter > printReport > with normal setup > should print jobs of all instance when run with multiremote 1`] = `
[
  [
    "------------------------------------------------------------------
[MultiremoteBrowser #0-0] Running: MultiremoteBrowser on ,
[MultiremoteBrowser #0-0]
[MultiremoteBrowser #0-0] » /foo/bar/loo.e2e.js
[MultiremoteBrowser #0-0] Foo test
[MultiremoteBrowser #0-0]    green ✓ foo
[MultiremoteBrowser #0-0]    green ✓ bar
[MultiremoteBrowser #0-0]
[MultiremoteBrowser #0-0] » /bar/foo/loo.e2e.js
[MultiremoteBrowser #0-0] Bar test
[MultiremoteBrowser #0-0]    green ✓ some test
[MultiremoteBrowser #0-0]    red ✖ a failed test
[MultiremoteBrowser #0-0]    red ✖ a failed test with no stack
[MultiremoteBrowser #0-0]
[MultiremoteBrowser #0-0] » /bar/loo/foo.e2e.js
[MultiremoteBrowser #0-0] Baz test
[MultiremoteBrowser #0-0]    green ✓ foo bar baz
[MultiremoteBrowser #0-0]    cyan - a skipped test
[MultiremoteBrowser #0-0]
[MultiremoteBrowser #0-0] green 4 passing (5s)
[MultiremoteBrowser #0-0] red 1 failing
[MultiremoteBrowser #0-0] cyan 1 skipped
[MultiremoteBrowser #0-0]
[MultiremoteBrowser #0-0] 1) Bar test a failed test
[MultiremoteBrowser #0-0] red expected foo to equal bar
[MultiremoteBrowser #0-0] gray Failed test stack trace
[MultiremoteBrowser #0-0]
[MultiremoteBrowser #0-0] 2) Bar test a failed test with no stack
[MultiremoteBrowser #0-0] red expected foo to equal bar
[MultiremoteBrowser #0-0]
[MultiremoteBrowser #0-0] Check out browserA job at https://app.saucelabs.com/tests/foobar?auth=2d3c4ca3cae505723f2fa903563fe019
[MultiremoteBrowser #0-0] Check out browserB job at https://app.saucelabs.com/tests/barfoo?auth=64012ad809cda36d46c5c2175bc212b4
",
  ],
]
`;

exports[`SpecReporter > printReport > with normal setup > should print link to Sauce Labs for many regions 1`] = `
[
  [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /foo/bar/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/foo/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/loo/foo.e2e.js
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.eu-central-1.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9?auth=364414eae3ee11cb8b8bb3fc3e3b5e12
",
  ],
]
`;

exports[`SpecReporter > printReport > with normal setup > should print link to Sauce Labs for many regions 2`] = `
[
  [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /foo/bar/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/foo/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/loo/foo.e2e.js
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.apac-southeast-1.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9?auth=364414eae3ee11cb8b8bb3fc3e3b5e12
",
  ],
]
`;

exports[`SpecReporter > printReport > with normal setup > should print link to Sauce Labs for many regions 3`] = `
[
  [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /foo/bar/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/foo/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/loo/foo.e2e.js
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.us-east-1.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9?auth=364414eae3ee11cb8b8bb3fc3e3b5e12
",
  ],
]
`;

exports[`SpecReporter > printReport > with normal setup > should print link to Sauce Labs job details page for RDC 1`] = `
[
  [
    "------------------------------------------------------------------
[udid-serial-of-device iOS 14.3 #0-0] Running: udid-serial-of-device on iOS 14.3 executing safari
[udid-serial-of-device iOS 14.3 #0-0]
[udid-serial-of-device iOS 14.3 #0-0] » /foo/bar/loo.e2e.js
[udid-serial-of-device iOS 14.3 #0-0] Foo test
[udid-serial-of-device iOS 14.3 #0-0]    green ✓ foo
[udid-serial-of-device iOS 14.3 #0-0]    green ✓ bar
[udid-serial-of-device iOS 14.3 #0-0]
[udid-serial-of-device iOS 14.3 #0-0] » /bar/foo/loo.e2e.js
[udid-serial-of-device iOS 14.3 #0-0] Bar test
[udid-serial-of-device iOS 14.3 #0-0]    green ✓ some test
[udid-serial-of-device iOS 14.3 #0-0]    red ✖ a failed test
[udid-serial-of-device iOS 14.3 #0-0]    red ✖ a failed test with no stack
[udid-serial-of-device iOS 14.3 #0-0]
[udid-serial-of-device iOS 14.3 #0-0] » /bar/loo/foo.e2e.js
[udid-serial-of-device iOS 14.3 #0-0] Baz test
[udid-serial-of-device iOS 14.3 #0-0]    green ✓ foo bar baz
[udid-serial-of-device iOS 14.3 #0-0]    cyan - a skipped test
[udid-serial-of-device iOS 14.3 #0-0]
[udid-serial-of-device iOS 14.3 #0-0] green 4 passing (5s)
[udid-serial-of-device iOS 14.3 #0-0] red 1 failing
[udid-serial-of-device iOS 14.3 #0-0] cyan 1 skipped
[udid-serial-of-device iOS 14.3 #0-0]
[udid-serial-of-device iOS 14.3 #0-0] 1) Bar test a failed test
[udid-serial-of-device iOS 14.3 #0-0] red expected foo to equal bar
[udid-serial-of-device iOS 14.3 #0-0] gray Failed test stack trace
[udid-serial-of-device iOS 14.3 #0-0]
[udid-serial-of-device iOS 14.3 #0-0] 2) Bar test a failed test with no stack
[udid-serial-of-device iOS 14.3 #0-0] red expected foo to equal bar
[udid-serial-of-device iOS 14.3 #0-0]
[udid-serial-of-device iOS 14.3 #0-0] Check out job at  https://app.eu-central-1.saucelabs.com/tests/c752c683e0874da4b1dad593ce6645b2
",
  ],
]
`;

exports[`SpecReporter > printReport > with normal setup > should print link to Sauce Labs job details page for VDC 1`] = `
[
  [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /foo/bar/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/foo/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/loo/foo.e2e.js
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9?auth=364414eae3ee11cb8b8bb3fc3e3b5e12
",
  ],
]
`;

exports[`SpecReporter > printReport > with normal setup > should print link to Sauce Labs job details page if run with Sauce Connect (jsonwp) 1`] = `
[
  [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /foo/bar/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/foo/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/loo/foo.e2e.js
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9?auth=364414eae3ee11cb8b8bb3fc3e3b5e12
",
  ],
]
`;

exports[`SpecReporter > printReport > with normal setup > should print link to Sauce Labs job details page if run with Sauce Connect (w3c) 1`] = `
[
  [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /foo/bar/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/foo/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/loo/foo.e2e.js
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] Check out job at https://app.saucelabs.com/tests/ba86cbcb70774ef8a0757c1702c3bdf9?auth=364414eae3ee11cb8b8bb3fc3e3b5e12
",
  ],
]
`;

exports[`SpecReporter > printReport > with normal setup > should print the report to the console 1`] = `
[
  [
    "------------------------------------------------------------------
[loremipsum 50 Windows 10 #0-0] Running: loremipsum (v50) on Windows 10
[loremipsum 50 Windows 10 #0-0] Session ID: foobar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /foo/bar/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Foo test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo
[loremipsum 50 Windows 10 #0-0]    green ✓ bar
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/foo/loo.e2e.js
[loremipsum 50 Windows 10 #0-0] Bar test
[loremipsum 50 Windows 10 #0-0]    green ✓ some test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test
[loremipsum 50 Windows 10 #0-0]    red ✖ a failed test with no stack
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] » /bar/loo/foo.e2e.js
[loremipsum 50 Windows 10 #0-0] Baz test
[loremipsum 50 Windows 10 #0-0]    green ✓ foo bar baz
[loremipsum 50 Windows 10 #0-0]    cyan - a skipped test
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] green 4 passing (5s)
[loremipsum 50 Windows 10 #0-0] red 1 failing
[loremipsum 50 Windows 10 #0-0] cyan 1 skipped
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 1) Bar test a failed test
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
[loremipsum 50 Windows 10 #0-0] gray Failed test stack trace
[loremipsum 50 Windows 10 #0-0]
[loremipsum 50 Windows 10 #0-0] 2) Bar test a failed test with no stack
[loremipsum 50 Windows 10 #0-0] red expected foo to equal bar
",
  ],
]
`;

exports[`SpecReporter > showPreface > false 1`] = `[]`;

exports[`SpecReporter > showPreface > true 1`] = `[]`;
